Proyecto2/kubernetes/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer
  namespace: so1-proyecto2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
      - name: consumer
        image: alvarog1318/s1p2_consumer:v2.5
        resources:
          limits:
            cpu: "0.2"
            memory: "500Mi"
