Proyecto2/kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-db
  namespace: so1-proyecto2
  labels:
    app: redis-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-db
  template:
    metadata:
      labels:
        app: redis-db
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379        
        resources:
          limits:
            cpu: "0.5"
            memory: "500Mi"
          requests:
            cpu: "0.1"
            memory: "256Mi"
