Proyecto2/kubernetes/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: so1-proyecto2
spec:
  type: LoadBalancer
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis-db
