Proyecto2/kubernetes/wasm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasm-producer
  namespace: so1-proyecto2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wasm-producer
  template:
    metadata:
      labels:
        app: wasm-producer
    spec:
      containers:
      - name: grcp-client
        image: alvarog1318/s1p2_wasm_producer:v0.1
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "500m"
            memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: wasm-producer-service
  namespace: so1-proyecto2
spec:
  selector:
    app: wasm-producer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
