Proyecto2/kubernetes/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: so1-proyecto2-ingress
  namespace: so1-proyecto2
spec:
  rules:
  - http:
      paths:
      - path: /grcp
        pathType: Prefix
        backend:
          service:
            name: grcp-client-service
            port:
              number: 80
      - path: /wasm
        pathType: Prefix
        backend:
          service:
            name: wasm-producer-service
            port:
              number: 80
